--- a/src/numerical/interpolation/CMakeLists.txt
+++ b/src/numerical/interpolation/CMakeLists.txt
@@ -3,7 +3,7 @@ set_directory_properties(PROPERTIES LABELS interpolation)
 add_library(interp OBJECT interpolation.f90 interp2d.f90)
 target_link_libraries(interp PRIVATE const)
 
-if(NOT (hdf5 AND ${PROJECT_NAME}_BUILD_TESTING))
+if(NOT (hdf5 AND BUILD_TESTING))
   return()
 endif()
 
