cmake: correct logic for Intel LLVM

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -19,9 +19,7 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
   if(CMAKE_Fortran_COMPILER_ID STREQUAL GNU)
     set(prefix ~/lib_gcc)
-  elseif(CMAKE_Fortran_COMPILER_ID STREQUAL Intel)
-    set(prefix ~/lib_intel)
-  elseif(CMAKE_Fortran_COMPILER_ID STREQUAL IntelLLVM)
+  elseif(CMAKE_Fortran_COMPILER_ID MATCHES Intel)
     set(prefix ~/lib_intel)
   else()
     set(prefix ~/lib)
