--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -14,8 +14,8 @@ set(_tmpdifffn ${CMAKE_CURRENT_BINARY_DIR}/test_diffusion1d.h5)
 
 add_executable(test_diffusion1d test_diffusion1D.f90)
 # lapack needed for MacOS
-target_link_libraries(test_diffusion1d PRIVATE PDEparabolic gbsv const
-  LAPACK::LAPACK h5fortran::h5fortran)
+target_link_libraries(test_diffusion1d PRIVATE PDEparabolic gbsv const LAPACK::LAPACK h5fortran::h5fortran MPI::MPI_Fortran)
+
 # WORKING_DIRECTORY is needed to write output file to repeatable path.
 add_test(NAME unit:diffusion1
   COMMAND $<TARGET_FILE:test_diffusion1d> ${_tmpdifffn}
