--- a/src/numerical/interpolation/CMakeLists.txt
+++ b/src/numerical/interpolation/CMakeLists.txt
@@ -21,8 +21,11 @@ set(_testfile_interp2 ${CMAKE_CURRENT_BINARY_DIR}/output2d.h5)
 set(_testfile_interp3in ${CMAKE_CURRENT_BINARY_DIR}/input3d.h5)
 set(_testfile_interp3 ${CMAKE_CURRENT_BINARY_DIR}/output3d.h5)
 
+# --- 2D
+
 add_executable(test_interp2 testinterp2.f90)
-target_link_libraries(test_interp2 PRIVATE interp const h5fortran::h5fortran)
+target_link_libraries(test_interp2 PRIVATE interp const h5fortran::h5fortran MPI::MPI_Fortran)
+
 add_test(NAME unit:interp2
   COMMAND $<TARGET_FILE:test_interp2> ${_testfile_interp2in} ${_testfile_interp2}
   WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
@@ -31,8 +34,11 @@ set_tests_properties(unit:interp2 PROPERTIES
   LABELS unit
   FIXTURES_SETUP GemInterp2)
 
+# --- 3D
+
 add_executable(test_interp3 testinterp3.f90)
-target_link_libraries(test_interp3 PRIVATE const interp h5fortran::h5fortran)
+target_link_libraries(test_interp3 PRIVATE const interp h5fortran::h5fortran MPI::MPI_Fortran)
+
 add_test(NAME unit:interp3
   COMMAND $<TARGET_FILE:test_interp3> ${_testfile_interp3in} ${_testfile_interp3}
   WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
