cut new precip data object into main code; compiles and links okay

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable(gemini.bin gemini.f90 gemini_init.f90 ${CMAKE_CURRENT_BINARY_DIR}
 set_target_properties(gemini.bin PROPERTIES
   RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 target_link_libraries(gemini.bin PRIVATE advec calculus config const collision diffusion fang grid io interp ionization gbsv
+  inputdata precipdata
   meshobj meshobj_cart meshobj_dipole spherical newton geomagnetic
   exe_frontend
   msis_ifc multifluid
